fix dark mode

--- a/packages/nextjs/app/layout.css
+++ b/packages/nextjs/app/layout.css
@@ -1,6 +1,6 @@
 .main-container::before,
 .main-container::after {
-  background: linear-gradient(180deg, #ffefd1 -10.38%, #ffd1d6 19.32%, #d2cbff 57.58%, #9cffe7 82.73%, #a6ffb4 105.86%);
+  background: linear-gradient(180deg, #fbfcfe -10.38%, #ffd1d6 19.32%, #d2cbff 57.58%, #9cffe7 82.73%, #a6ffb4 105.86%);
   content: " ";
   position: absolute;
   top: 0;
@@ -10,6 +10,9 @@
 
 .main-container::after {
   background: linear-gradient(180deg, rgba(251, 252, 254, 0) 0%, #fbfcfe 100%);
+}
+.main-container.dark::after {
+  background: linear-gradient(180deg, rgba(251, 252, 254, 0) 0%, #1a1e23 100%);
 }
 
 .main-content {
